--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 VenvAppTallerWeb/
+proyecto/aplicacion/__pycache__/admin.cpython-312.pyc
+proyecto/aplicacion/__pycache__/models.cpython-312.pyc
+proyecto/aplicacion/migrations/__pycache__/0001_initial.cpython-312.pyc
